# aurora

./: CMakeLists.txt  LICENSE.txt  aurora.cmake
aurora/: application.cpp  application.h  asset_loader.cpp  asset_loader.h  global.cpp  global.h  instance.cpp  instance.h  resources.h  window.cpp  window.h
aurora/aether/: CMakeLists.txt  a_level.cpp  a_level_controller.cpp  a_level_object.cpp  a_mesh.cpp  a_opt_mesh.cpp  a_shader.cpp  a_texture.cpp  aether.cpp  aether.h  aether.xsd  alvl.xsd  ashdr.xsd
aurora/glimpl/: opengl32_impl.cpp  opengl45_impl.cpp  opengl_impl.h  opengl_impl_node.cpp  opengl_impl_node.h
aurora/graphics/: enums.h  graphics.h  implementation.cpp  implementation.h  implementation_finder.cpp  implementation_finder.h  obj_ref_base.cpp  obj_ref_base.h
aurora/level/: controller.cpp  controller.h  controller_registry.cpp  controller_registry.h  level.cpp  level.h  object.cpp  object.h
aurora/level/controllers/: mesh_asset_controller.cpp  mesh_asset_controller.h  renderer_controller.cpp  renderer_controller.h
aurora/level/controllers/cameras/: camera_2d_controller.cpp  camera_2d_controller.h  camera_3d_controller.cpp  camera_3d_controller.h
aurora/resources/: buffer.cpp  buffer.h  draw_object.cpp  draw_object.h  framebuffer.cpp  framebuffer.h  icon.cpp  icon.h  shader.cpp  shader.h  texture_1d.cpp  texture_1d.h  texture_2d.cpp  texture_2d.h  texture_3d.cpp  texture_3d.h
aurora/shaders/: shaders.cmake  shaders.cpp  shaders.h  test.ashdr.xml
test/: CMakeLists.txt  main.cpp
test/assets/: test.alvl.xml  test.ashdr.xml
tools/: CMakeLists.txt
tools/alevelc/: CMakeLists.txt  alevelc.cpp
tools/ameshc/: CMakeLists.txt  ameshc.cpp
tools/amkindex/: CMakeLists.txt  amkindex.cpp
tools/ashaderc/: CMakeLists.txt  ashaderc.cpp
tools/atexturec/: CMakeLists.txt  atexturec.cpp
